# ruach-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/core/: BaseAST.cpp  BaseAST.h  Object.cpp  Object.h  Token.h  Token.hpp  Variable.cpp  Variable.h
src/tests/: RuachCoreTests.cpp
